--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           <p class="banner-text">A Manacá está revolucionando a antecipação de recebíveis oferecendo a taxa mais baixa do mercado com o máximo de transparência.</p>
           <div id="click-simulate" class="button">Faça sua simulação</div>
         </div>
-          <%= image_tag 'footersymbol.png', class: "banner-logo" %>
+          <%= image_tag 'imagens/symbol.svg', class: "banner-logo" %>
       </div>
     </section>
 
@@ -168,7 +168,7 @@
       <div class="antecipation-info">
         <div class="ant-title">Antecipação de <spam class="manaca-color">recebíveis.</spam></div>
         <div class="ant-text">Transforme suas vendas a prazo em vendas à vista. Oferecemos as taxas mais baratas do mercado com o máximo de transparência e comodidade.</div>
-        <div class="ant-button">COMECE JÁ</div>
+        <div id="ant-button" class="ant-button">COMECE JÁ</div>
       </div>
       <div class="ant-image">
         <%= image_tag "imagens/banking.png", class: 'img' %>
