--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,21 +1,21 @@
 .banner {
   color: white;
   text-align: center;
-  width: 100vh;
+  width: auto;
   height: 340px;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-color: $manaca-purple;
   background-size: cover !important;
   background-position: center center;
   display: flex;
-  align-items: center;
-  justify-content: left;
+  align-items: flex-end;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
-  position: relative;
 }
 
 .banner .button {
+  cursor: pointer;
   display: flex;
   width: 89%;
   height: 35px;
@@ -31,25 +31,18 @@
   color: white;
   padding: 16px;
   margin-left: 50px;
+  margin-bottom: auto;
+  margin-top: auto;
+
     h4 {
     font-size: 32px;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
 }
 
-// @media (max-width: 576px) {
-//   .banner {
-//     height: 200px;
-//   }
-//   .banner-content {
-
-//     padding: 8px;
-//       h4 {
-//       font-size: 18px;
-//       text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-//     }
-//   }
-// }
+.banner-logo {
+  height: 70%;
+}
 
 @media (max-width:767px) {
   .banner {
@@ -61,13 +54,7 @@
   }
 
   .banner-content {
-  margin-left: 25px;
+    margin-left: 25px;
+    margin: auto;
   }
-}
-
-.banner-logo {
-  position: absolute;
-  bottom: 0;
-  right: 100px;
-  height: 70%;
 }
