--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -1,5 +1,5 @@
 <h2></h2>
-<div class="lead-info">
+<div id="lead-info" class="lead-info">
   <span class="lead-text">Valor total da nota:</span><span class="lead-span">R$<%= number_with_precision(@lead.invoice_amount, precision: 2).to_s.gsub('.',',') %></span>
 </div>
 <br>
