fix target blank and hidden objects

--- a/app/views/leads/contato.html.erb
+++ b/app/views/leads/contato.html.erb
@@ -1,4 +1,4 @@
-<h3 class="wrapper-title">Quer saber mais?</h3>
+<h3 id="wrapper" class="wrapper-title">Quer saber mais?</h3>
 <p class="wrapper-title">Entramos em contato com você!</p>
 <%= simple_form_for @lead do |lead| %>
   <%= lead.input :name, label: false, placeholder: "Nome" %>
