--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -32,15 +32,15 @@
               </div>
 
               <div class=" d-flex justify-content-around">
-                <%= link_to "https://www.facebook.com/manacacapital/" do %>
+                <%= link_to "https://www.facebook.com/manacacapital/", target: "_blank" do %>
                   <%= image_tag 'imagens/facebook-logo-branco.svg', class: "footer-social-icon" %>
                 <% end %>
 
-                <%= link_to "https://www.instagram.com/manacacapital/" do %>
+                <%= link_to "https://www.instagram.com/manacacapital/", target: "_blank" do %>
                   <%= image_tag 'imagens/instagram-logo-branco.svg', class: "footer-social-icon" %>
                 <% end %>
 
-                <%= link_to "https://www.linkedin.com/company/manacacapital/" do %>
+                <%= link_to "https://www.linkedin.com/company/manacacapital/", target: "_blank" do %>
                   <%= image_tag 'imagens/linkedin-logo-branco.svg', class: "footer-social-icon" %>
                 <% end %>
               </div>
