--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,13 +18,13 @@
     <div class="social">
       <div class="social-links">
         <div class="m-2">
-          <%= link_to "https://www.facebook.com/manacacapital/" do %>
+          <%= link_to "https://www.facebook.com/manacacapital/", target: "_blank" do %>
             <%= image_tag 'imagens/facebook-logo-azul.svg', class: "social-icon" %>
           <% end %>
-          <%= link_to "https://www.instagram.com/manacacapital/" do %>
+          <%= link_to "https://www.instagram.com/manacacapital/", target: "_blank" do %>
             <%= image_tag 'imagens/instagram-logo-azul.svg', class: "social-icon" %>
           <% end %>
-          <%= link_to "https://www.linkedin.com/company/manacacapital/" do %>
+          <%= link_to "https://www.linkedin.com/company/manacacapital/", target: "_blank" do %>
             <%= image_tag 'imagens/linkedin-logo-azul.svg', class: "social-icon" %>
           <% end %>
         </div>
