--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -365,6 +365,7 @@ input {
   .fees-graph {
     padding: 15px;
     box-shadow: 1px 1px 15px;
+    border-radius: 5px;
 
     h5 {
       font-family:  'Avenir';
