fix minimal details

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,19 +28,6 @@
       </div>
     </section>
 
-    <!-- BANNER SECTION -->
-    <section id="banner">
-      <div class="banner">
-        <div class="banner-content">
-          <h4 class="banner-text">Antecipe seu sucesso.</h4>
-          <p class="banner-text">A Manacá está revolucionando a antecipação de recebíveis oferecendo a taxa mais baixa do mercado com o máximo de transparência.</p>
-          <div id="click-simulate" class="button">Faça sua simulação</div>
-        </div>
-          <%= image_tag 'imagens/symbol.svg', class: "banner-logo" %>
-      </div>
-    </section>
-
-
     <!-- INPUT CONTAINER -->
     <div class="container">
       <div class="col-12 offset-sm-3 col-sm-6">
@@ -50,19 +37,37 @@
         </div>
       </div>
     </div>
+
+
+    <!-- BANNER SECTION -->
+    <section id="banner">
+      <div class="banner">
+        <div class="banner-content">
+          <h4>Antecipe seu sucesso.</h4>
+          <p class="banner-text">A Manacá está revolucionando a antecipação de recebíveis oferecendo a taxa mais baixa do mercado com o máximo de transparência.</p>
+          <div id="click-simulate" class="button">FAÇA SUA SIMULAÇÃO</div>
+        </div>
+          <%= image_tag 'imagens/symbol.svg', class: "banner-logo" %>
+      </div>
+    </section>
+
+
+    <!-- INPUT CONTAINER -->
+
+
     <!-- HASHTAG FIELD -->
     <div class="hashtags-field">
       <div class="hashtags-box">
         <p class="hashtags">#SomosTodosEmpreendedores</p>
         <h4>Nós não criamos a Manacá porque gostávamos de factoring.</h4>
         <p style="color: #4f82fc">Muito pelo contrário.</p>
-        <p>A Manacá foi fundada com a missão de ser o melhor parceiro financeiro que o empreendedor pode ter.<br> Sendo assim, temos como principal objetivo, provar que mesmo em um mercado antigo e burocrático, é possível ser simples, moderno e eficiente.</p>
+        <p>A Manacá foi fundada com a missão de ser o melhor parceiro financeiro que o empreendedor pode ter. Sendo assim, temos como principal objetivo, provar que mesmo em um mercado antigo e burocrático, é possível ser simples, moderno e eficiente.</p>
       </div>
     </div>
 
     <!-- HOW IT WORKS -->
     <div class="card-grid">
-      <h3>Como Funciona.</h3>
+      <h3>Como funciona.</h3>
       <div class="card-content">
         <%= image_tag 'imagens/contact-information-azul.svg', class: 'card-image' %>
         <h4><spam class="index">01</spam> Cadastre-se online</h4>
@@ -93,7 +98,7 @@
     <div class="box">
       <div class="box-simulate">
         <div><h3>Simule uma operação.</h3></div>
-        <div id="click-btn" class="click-btn"><p>CLIQUE AQUI</p></div>
+        <div id="click-btn" class="click-btn">CLIQUE AQUI</div>
       </div>
     </div>
 
@@ -130,7 +135,25 @@
       <div class="fees-graph">
         <h5 class="manaca-color">Os competidores chegam a ser 2x mais caros.</h5>
         <p>A Manacá não só não incorre em IOF ou Ad-valorem, como também oferece a taxa mais baixa do mercado.</p>
+        <div class="graph-content">
+          <div class="graph-data-manaca manaca-color">
+            <div class="graph-title">Manacá</div>
+            <div class="graph-manaca"></div>
+            <div class="graph-manaca-info">2,3%</div>
+          </div>
+          <div class="graph-data-fidcs">
+            <div class="graph-title">FIDCs</div>
+            <div class="graph-fidcs"></div>
+            <div class="graph-fidcs-info">3,0%</div>
+          </div>
+          <div class="graph-data-factor">
+            <div class="graph-title">Factorings</div>
+            <div class="graph-factor"></div>
+            <div class="graph-factor-info">4,1%</div>
+          </div>
+        </div>
       </div>
+
     </div>
 
 
