--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,12 +26,12 @@
   <footer>
       <div class="container">
           <div class="row">
-            <div class="col-sm-3 col-md-3 item">
+            <div class="footer-social col-sm-3 col-md-3 item">
               <div class="">
                 <img src="/assets/manaca-logo-horizontal-b.png", class="footer-logo" />
               </div>
 
-              <div class=" d-flex justify-content-around">
+              <div class="d-flex justify-content-around">
                 <%= link_to "https://www.facebook.com/manacacapital/", target: "_blank" do %>
                   <%= image_tag 'imagens/facebook-logo-branco.svg', class: "footer-social-icon" %>
                 <% end %>
