--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,7 @@
   color: white;
   text-align: center;
   width: auto;
-  height: 340px;
+  height: 444px;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-color: $manaca-purple;
   background-size: cover !important;
@@ -17,25 +17,33 @@
 .banner .button {
   cursor: pointer;
   display: flex;
-  width: 89%;
-  height: 35px;
+  width: 50%;
+  height: 60px;
+  align-items: center;
   padding: 6px;
+  padding-top: 14px;
   justify-content: center;
   background-color: white;
   color: $manaca-purple;
+  font-family: 'Avenir';
 }
 
 .banner-content {
-  width: 300px;
+  width: 548px;
   text-align: initial;
   color: white;
   padding: 16px;
-  margin-left: 50px;
+  margin-left: 120px;
   margin-bottom: auto;
   margin-top: auto;
 
+  .banner-text {
+    font-family: 'Avenir';
+    width: 70%;
+  }
+
     h4 {
-    font-size: 32px;
+    font-size: 73px;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
 }
@@ -43,10 +51,28 @@
 .banner-logo {
   height: 70%;
 }
+@media (max-width:1023px) {
+  .banner {
+    .button {
+      width: 75% !important;
+    }
+    .banner-content {
+      margin-left: 50px;
+      h4 {
+        font-size: 47px;
+      }
+    }
+  }
+}
 
 @media (max-width:767px) {
   .banner {
     justify-content: end;
+
+    .button {
+      width: 75% !important;
+      margin: 0 auto;
+    }
   }
 
   .banner-logo {
@@ -54,7 +80,16 @@
   }
 
   .banner-content {
-    margin-left: 25px;
-    margin: auto;
+    max-width: 300px !important;
+    margin: auto !important;
+    text-align: center;
+
+    .banner-text {
+      margin: 16px auto;
+    }
+
+    h4 {
+      font-size: 47px;
+    }
   }
 }
