--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -22,6 +22,15 @@ body {
   background-color: white;
 }
 
+.footer-social {
+  padding-right: 80px;
+}
+
+@media (max-width: 767px) {
+  .footer-social {
+    padding-right: 0;
+  }
+}
 .social-button {
   height: 34px;
   width: 34px;
