--- a/app/assets/stylesheets/components/_simulate.scss
+++ b/app/assets/stylesheets/components/_simulate.scss
@@ -1,31 +1,35 @@
 
 .simulate {
   color: #5383FE;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: thin;
+  font-family: 'Avenir';
   text-align: -webkit-center;
   margin-bottom: 35px;
   margin-top: 15px;
   p {
     margin-bottom: 0;
   }
+  h1 {
+    font-family: 'Avenir';
+    font-weight: bold;
+    font-size: 52px;
+    margin: 70px auto;
+  }
 }
 
 .simulate-card {
   cursor: pointer;
-  padding: 15px;
-  width: 500px;
+  padding: 35px 0;
 }
 
 .card-border {
   width: 400px;
-  border: 4px solid #4f82fc;
+  border: 6px solid #4f82fc;
   border-radius: 2px;
+  margin: 0 auto 100px;
 }
 
 .pencil {
-  width: 32px;
+  width: 44px;
   margin: 0;
 }
 
