--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -40,25 +40,42 @@ input::placeholder {
   flex-direction: column;
   text-align: center;
   align-items: center;
+  width: 601px;
+  margin: 43px auto;
+
   .hashtags {
     font-family: 'Avenir';
     color: #2c4687;
-    border-bottom: 3px solid $manaca-purple;
+    border-bottom: 6px solid $manaca-purple;
     margin-bottom: 30px;
     margin-top: 52px;
+    padding: 0;
   }
   p {
     font-family: 'Avenir';
     color: #585a5e;
     max-width: 635px;
     padding: 20px;
+    font-size: 25px;
+    margin-bottom: 0;
   }
   h4 {
+    font-family: 'Avenir' !important;
     color: #2c4687;
+    font-weight: bold;
+    font-size: 38px;
   }
 }
 
-
+@media (max-width: 767px) {
+  .hashtags-box {
+    max-width: 300px !important;
+    p {
+      max-width: 300px !important;
+      font-size: 20px;
+    }
+  }
+}
 
 .hashtags-promo {
   color: #EE76FE;
@@ -202,6 +219,7 @@ input {
   }
 }
 
+// CARD SECTION
 .card-grid {
   font-family: 'Avenir';
   display: flex;
@@ -211,6 +229,9 @@ input {
   padding: 16px;
   color: #585a5e;
 
+  .card-content {
+    width: 440px;
+  }
   .card-image {
     margin: 7px;
     height: 56px;
@@ -220,6 +241,7 @@ input {
   color: #162d5a;
   font-family: 'Avenir';
   font-weight: bold;
+  font-size: 45px;
   }
   h4 {
   font-family: 'Avenir';
@@ -229,35 +251,32 @@ input {
   }
 }
 
+@media (max-width: 767px) {
+  .card-content {
+    width: 300px !important;
+  }
+}
+
+// BOX SECTION
+
 .box {
   display: flex;
   justify-content: center;
+  margin-top: 35px;
   margin-bottom: 15px;
 
   .box-simulate {
     display: flex;
     text-align: center;
     align-items: center;
-    border: 5px solid $manaca-purple;
-    padding: 25px;
+    border: 8px solid $manaca-purple;
+    padding: 45px 76px;
     min-height: 90px;
 
     .click-btn {
       cursor: pointer;
       color: white;
       background-color: $manaca-purple;
-    }
-
-    h3 {
-      color: $manaca-purple;
-      font-family: 'Avenir';
-      font-weight: bold;
-      margin-top: 7px;
-      margin-right: 7px;
-      margin-bottom: 0px;
-    }
-
-    p {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -265,6 +284,16 @@ input {
       height: 52px;
       font-family: 'Avenir';
       margin-bottom: 0 !important;
+      padding-top: 4px;
+    }
+
+    h3 {
+      color: $manaca-purple;
+      font-family: 'Avenir';
+      font-weight: bold;
+      margin-top: 7px;
+      margin-right: 65px;
+      margin-bottom: 0px;
     }
   }
 }
@@ -275,6 +304,12 @@ input {
   }
   .box-simulate {
     flex-direction: column;
+    max-width: 300px !important;
+
+    h3 {
+      margin-right: 0 !important;
+      margin-bottom: 5px !important;
+    }
   }
   .click-btn {
     margin-top: 7px;
@@ -291,14 +326,15 @@ input {
   margin-top: 60px;
   align-items: center;
   font-family:  'Avenir';
+  padding: 35px 0;
 
   .info-title {
     text-align: center;
     font-family:  'Avenir';
     font-weight: bold;
     font-size: 34px;
-    margin: 16px;
-    width: 0 auto;
+    margin: 32px;
+    // width: 0 auto;
     max-width: 420px;
   }
 
@@ -306,16 +342,20 @@ input {
     color: $manaca-purple;
   }
 
+  .info-cards {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 15px;
+    width: 100%;
+  }
+
   .cards {
     align-items: start;
     margin: 7px 15px;
+    max-width: 362px;
+    padding: 0 27px;
   }
 
-  .info-cards {
-    display: flex;
-    justify-content: center;
-    margin: 0 15px;
-  }
   .subtitle {
     font-family:  'Avenir';
     font-size: 21px;
@@ -330,6 +370,7 @@ input {
 @media (max-width: 767px) {
   .info-cards {
     flex-direction: column;
+    align-items: center;
   }
   .info-title {
     font-size: 28px;
@@ -345,35 +386,84 @@ input {
 .fees {
   display: flex;
   justify-content: center;
-  margin: 50px 30px;
+  margin: 100px 30px;
   font-family:  'Avenir' !important;
   color: #162D5A;
 
   .fees-text {
     width: 970px;
+    margin-left: 85px;
+    padding: 45px 0;
     padding-right: 25px;
 
     h4 {
       font-family:  'Avenir';
       font-weight: bold;
-      font-size: 26px;
+      font-size: 34px;
     }
     p {
       text-align: justify;
     }
   }
+
   .fees-graph {
-    padding: 15px;
-    box-shadow: 1px 1px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 48px 18px;
+    box-shadow: 1px 1px 20px 0px rgba(0,0,0, 0.1);
     border-radius: 5px;
+    margin: 0 85px;
 
     h5 {
       font-family:  'Avenir';
-      font-size: 17px;
+      font-size: 22px;
     }
     p {
       text-align: justify;
       font-size: 15px;
+    }
+
+    .graph-content {
+      display: flex;
+      align-self: start;
+      flex-direction: column;
+      .graph-data-manaca {
+        display: flex;
+        align-items: center;
+        margin-left: 105px;
+        .graph-manaca {
+          background-color: $manaca-purple;
+          width: 70px;
+          height: 30px;
+          margin: 2px 10px;
+        }
+      }
+      .graph-data-fidcs {
+        opacity: 0.7;
+        display: flex;
+        align-items: center;
+        margin-left: 105px;
+        .graph-fidcs {
+          background-color: $manaca-purple;
+          width: 106px;
+          height: 30px;
+          margin: 2px 22px;
+        }
+      }
+      .graph-data-factor {
+        opacity: 0.7;
+        display: flex;
+        align-items: center;
+        margin-left: 74px;;
+        .graph-factor {
+          background-image: linear-gradient(to right, $manaca-purple , #d5a8fc);
+          width: 175px;
+          height: 30px;
+          margin: 2px 22px;
+        }
+      }
     }
   }
 }
@@ -386,10 +476,33 @@ input {
       width: auto;
       padding-right: 0;
       text-align: center;
+      margin: 0 auto;
 
     }
     .fees-graph {
+      margin: 0;
       margin-top: 25px;
+      .graph-data-manaca {
+        margin-left: 3px !important;
+        .graph-manaca {
+          width: 51px !important;
+          margin: 2px 64px 2px 23px !important;
+        }
+      }
+      .graph-data-fidcs {
+        margin-left: 4px !important;
+        .graph-fidcs {
+          margin: 2px 33px 2px 35px !important;
+          width: 82px !important;
+        }
+      }
+      .graph-data-factor {
+        margin-left: 2px !important;
+        .graph-factor {
+          margin: 2px 6px !important;
+          width: 110px !important;
+        }
+      }
     }
   }
 
@@ -406,8 +519,12 @@ input {
   margin-bottom: 40px;
 
   .taxes-numbers {
-    border: 5px solid $manaca-purple;
+    border: 6px solid #4166FC;
     padding: 12px;
+    padding-right: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 
     .subtitle {
       color: #585a5e;
@@ -425,6 +542,7 @@ input {
       color: #162D5A;
       font-weight: bold;
       margin-bottom: 12px;
+      font-size: 35px;
     }
     .taxes-text {
       text-align: justify;
@@ -458,12 +576,12 @@ input {
   width: 352px;
   margin: 0 auto;
   font-family:  'Avenir';
-
+  margin-top: 90px;
 
   .review-icon {
     width: 60px;
     margin: 0 auto;
-    border: 1px #3540ff solid;
+    border: 2px #3540ff solid;
     border-radius: 50px;
     height: 60px;
     display: flex;
@@ -475,11 +593,11 @@ input {
     padding: 20px;
   }
   .divisor{
-    width: 30px;
-    height: 2px;
+    width: 50px;
+    height: 3px;
     background: #0339de;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 0px;
   }
   .review-autor {
     padding: 15px 0;
@@ -499,19 +617,20 @@ input {
   justify-content: space-evenly;
   margin: 0 auto;
   margin-top: 62px;
-  margin-bottom: 40px;
+  margin-bottom: 100px;
+  padding: 0 18px;
 
-  .antecipation-info{
+  .antecipation-info {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    width: 300px;
+    width: 400px;
     font-family: 'Avenir';
 
     .ant-title {
       color: #162d5a;
       font-weight: bold;
-      font-size: 28px;
+      font-size: 40px;
     }
     .ant-text {
       text-align: justify;
@@ -523,13 +642,13 @@ input {
       text-align: center;
       border: 1px $manaca-purple solid;
       color: $manaca-purple;
-      padding: 10px 10px 5px 10px;
+      padding: 16px 16px 10px 16px;
     }
   }
 
   .ant-image {
     .img {
-      width: 300px;
+      width: 400px;
     }
   }
 }
@@ -538,8 +657,18 @@ input {
   .antecipation {
     flex-direction: column;
     align-items: center;
+    .antecipation-info {
+      padding: 9px;
+      align-items: center;
+      text-align: center;
+      width: 300px;
+    }
   }
   .ant-image {
     margin-top: 40px;
+    .img {
+      width: 300px !important;
+    }
   }
 }
+
