--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @lead do |lead| %>
-  <button type="button" id="upload_nota_button" class="text-center" onclick="document.getElementById('lead_invoice').click();" >UPLOAD NOTA FISCAL
+  <button type="button" id="upload_nota_button" class="text-center" onclick="document.getElementById('lead_invoice').click();" >Clique aqui para enviar sua nota fiscal.
   </button>
   <p id="invoice_filename"></p>
   <div id="nota_errors"></div>
