--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -18,10 +18,10 @@
   cursor: pointer;
   display: flex;
   width: 50%;
-  height: 60px;
+  height: 50px;
   align-items: center;
   padding: 6px;
-  padding-top: 14px;
+  padding-top: 13px;
   justify-content: center;
   background-color: white;
   color: $manaca-purple;
@@ -54,7 +54,8 @@
 @media (max-width:1023px) {
   .banner {
     .button {
-      width: 75% !important;
+      width: 44% !important;
+      text-align: center;
     }
     .banner-content {
       margin-left: 50px;
