--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -3,14 +3,14 @@
 }
 
 #upload_nota_button {
-  padding: 24px;
-  color: $manaca-purple;
-  background-color: white;
+  padding: 20px;
+  color: white;
+  background-color: $manaca-purple;
   border: none;
   font-weight: bold;
-  text-align: center;
-  border-radius: 8px;
+  border-radius: 3px;
   margin: 0 auto;
+  font-size: 18px;
 }
 
 input::placeholder {
@@ -25,7 +25,7 @@ input::placeholder {
   border: none;
   text-align: center;
   border-radius: 4px ;
-  margin: 0 auto;
+  margin: 10 auto;
   text-decoration: none;
   font-weight: normal;
   :hover {
@@ -90,13 +90,14 @@ input::placeholder {
 }
 
 .invoice-wrapper {
-  background-color: rgb(220, 220, 220);
-  border-radius: 8px;
+  font-family: 'Avenir';
+  border: 8px solid $manaca-purple;
+  border-radius: 2px;
   padding: 16px 40px 70px 40px;
   position: relative;
   text-align: center;
-  margin-bottom: 20px;
-  margin-top: 32px;
+  margin-bottom: 62px;
+  margin-top: 57px;
   transition: 0.5s;
 }
 
@@ -130,6 +131,7 @@ input::placeholder {
 
 #invoice_filename {
   color: rgba(120, 120, 120, 1);
+  margin-top: 6px;
 }
 
 input {
@@ -140,22 +142,25 @@ input {
 .lead-span {
   display: inline-block;
   background-color: white;
-  width: 200px;
+  width: auto;
   border-radius: 4px;
-  color: $manaca-purple;
-  margin-left: 24px;
+  color: #4166FC;
+  margin: 0 auto;
   align-self: flex-end;
 }
 
 .lead-info {
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .lead-text {
   flex-grow: 1;
   text-align: left;
+  color: #676E72;
 }
 
 #parceiros {
@@ -269,7 +274,7 @@ input {
     display: flex;
     text-align: center;
     align-items: center;
-    border: 8px solid $manaca-purple;
+    border: 6px solid $manaca-purple;
     padding: 45px 76px;
     min-height: 90px;
 
@@ -354,11 +359,15 @@ input {
     margin: 7px 15px;
     max-width: 362px;
     padding: 0 27px;
+
+    p {
+      font-size: 11px;
+    }
   }
 
   .subtitle {
     font-family:  'Avenir';
-    font-size: 21px;
+    font-size: 16px;
   }
   .info-icon {
     margin: 7px;
@@ -389,6 +398,7 @@ input {
   margin: 100px 30px;
   font-family:  'Avenir' !important;
   color: #162D5A;
+  align-items: center;
 
   .fees-text {
     width: 970px;
@@ -415,6 +425,8 @@ input {
     box-shadow: 1px 1px 20px 0px rgba(0,0,0, 0.1);
     border-radius: 5px;
     margin: 0 85px;
+    height: fit-content;
+    margin: 0 85px 0 36px;
 
     h5 {
       font-family:  'Avenir';
@@ -429,6 +441,8 @@ input {
       display: flex;
       align-self: start;
       flex-direction: column;
+      margin: 0 auto;
+
       .graph-data-manaca {
         display: flex;
         align-items: center;
