--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -133,8 +133,10 @@
         <p>Nossas taxas variam entre 1,75% e 3,50%, muito menos do que os 5% de desconto que geralmente as empresas oferecem para pagamento à vista. Conforme sua empresa cresce e evolui, seu custo com a Manacá diminui também. Excelentes empresas merecem excelentes taxas. Chega dessa história de que antecipação de recebíveis é um produto caro. Nossas taxas não são apenas competitivas, elas são as melhores.</p>
       </div>
       <div class="fees-graph">
-        <h5 class="manaca-color">Os competidores chegam a ser 2x mais caros.</h5>
-        <p>A Manacá não só não incorre em IOF ou Ad-valorem, como também oferece a taxa mais baixa do mercado.</p>
+        <div>
+          <h5 class="manaca-color">Os competidores chegam a ser 2x mais caros.</h5>
+          <p>A Manacá não só não incorre em IOF ou Ad-valorem, como também oferece a taxa mais baixa do mercado.</p>
+        </div>
         <div class="graph-content">
           <div class="graph-data-manaca manaca-color">
             <div class="graph-title">Manacá</div>
