--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -70,7 +70,7 @@
           <p class="copyright" style="color: #f6f6f6;">manacá © 2019</p>
       </div>
       <div class="footer-copyright">
-        <p>Desenvolvido por <a href="http://www.hortalab.com/" target="_blank">HortaTech <%= image_tag "horta-favicon.png", class: "hortalab-icon" %></a> <span style="font-size: 0.6em;"> @2019</span></p>
+        <p>Desenvolvido por <a href="http://www.hortalab.com/" target="_blank">HortaTech <%= image_tag "horta_branco.png", class: "hortalab-icon" %></a> <span style="font-size: 0.6em;"> @2019</span></p>
       </div>
     <%= image_tag 'footersymbol.png', class: "symbol " %>
   </footer>
