--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   height: 110px;
   position: fixed;
   width: 100vw;
-  padding: 0 29px;
+  padding: 0 114px;
   margin: 0;
   z-index: 500;
   background-color: white;
@@ -18,6 +18,24 @@
 
   a:hover {
     background-color: white;
+  }
+}
+
+@media (max-width: 1023px) {
+  .navbar {
+    padding: 0 77px;
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar {
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 374px) {
+  .navbar {
+    padding: 0 22px;
   }
 }
 
