--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -361,13 +361,13 @@ input {
     padding: 0 27px;
 
     p {
-      font-size: 11px;
+      font-size: 14px;
     }
   }
 
   .subtitle {
     font-family:  'Avenir';
-    font-size: 16px;
+    font-size: 18px;
   }
   .info-icon {
     margin: 7px;
@@ -594,13 +594,57 @@ input {
 }
 
 // REVIEW
+.slider-review {
+  width: 100%;
+  text-align: center;
+}
+
+// Styling the default Slick dots
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+
+  margin: 0;
+  padding: 1rem 0;
+
+  list-style-type: none;
+
+    li {
+      margin: 0 0.25rem;
+    }
+
+    button {
+      display: block;
+      width: 1rem;
+      height: 1rem;
+      padding: 0;
+
+      border: none;
+      border-radius: 50%;
+      background-color: $manaca-purple;
+
+      text-indent: -9999px;
+    }
+
+    li.slick-active button {
+      background-color: $manaca-purple;
+    }
+
+}
+
+.slick-dots li button:before {
+  background-color: $manaca-purple;
+  border-radius: 50%;
+}
 
 .review {
   text-align: center;
-  width: 352px;
+  width: 374px !important;
   margin: 0 auto;
   font-family:  'Avenir';
-  margin-top: 90px;
+  margin-top: 40px;
+  height: 315px;
 
   .review-icon {
     width: 60px;
@@ -630,7 +674,7 @@ input {
 
 @media (max-width: 767px) {
   .review{
-    width: 300px;
+    width: 300px !important;
   }
 }
 
@@ -695,4 +739,3 @@ input {
     }
   }
 }
-
