--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -178,14 +178,27 @@
     </div>
 
     <!-- REVIEW -->
-    <div class="review">
-      <div class="review-icon">
-        <%= image_tag 'imagens/marker.svg', class: 'img' %>
+    <div id="slider" class="slider-review">
+      <div class="review">
+        <div class="review-icon">
+          <%= image_tag 'imagens/marker.svg', class: 'img' %>
+        </div>
+        <div class="review-text">Muito impressionado com a transparência e simplicidade. Sabia exatamente qual era o custo e quanto ia receber. Recomendo.</div>
+        <div class="divisor"></div>
+        <div class="review-autor">Marcos R., Empreendedor, <spam class="manaca-color">Indústria Metalúrgica</spam></div>
       </div>
-      <div class="review-text">Muito impressionado com a transparência e simplicidade. Sabia exatamente qual era o custo e quanto ia receber. Recomendo.</div>
-      <div class="divisor"></div>
-      <div class="review-autor">Marcos R., Empreendedor, <spam class="manaca-color">Indústria Metalúrgica</spam></div>
+
+
+      <div class="review">
+        <div class="review-icon">
+          <%= image_tag 'imagens/marker.svg', class: 'img' %>
+        </div>
+        <div class="review-text">O relacionamento com a Manacá tem sido excelente. A combinação de tecnologia e pessoas faz com que a experiência seja extremamente transparente e fácil.</div>
+        <div class="divisor"></div>
+        <div class="review-autor">Pamela C., gerente financeiro, <spam class="manaca-color">Alimentos e Bebidas</spam></div>
+      </div>
     </div>
+
 
     <!-- ANTECIPATION -->
     <div class="antecipation">
