--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "slick-carousel/slick/slick";
+@import "slick-carousel/slick/slick-theme";
 
 // External libraries
 @import "font-awesome-sprockets";
