--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -28,7 +28,8 @@
           <div class="row">
             <div class="footer-social col-sm-3 col-md-3 item">
               <div class="">
-                <img src="/assets/manaca-logo-horizontal-b.png", class="footer-logo" />
+                <%= image_tag 'manaca-logo-horizontal-b.png', class: "footer-logo" %>
+
               </div>
 
               <div class="d-flex justify-content-around">
