Fix fonts and colors according client solicitation

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@ $footer-height: 130px;
   bottom: 0;
   width: 100%;
   height: $footer-height;
-  background-color: #4266FC;
+  background-color: $manaca-strong-blue;
   color: $white;
   display: flex;
   flex-direction: column;
