--- a/app/assets/stylesheets/components/_simulate.scss
+++ b/app/assets/stylesheets/components/_simulate.scss
@@ -1,8 +1,8 @@
 
 .simulate {
-  color: #5383FE;
+  color: $manaca-purple;
   font-family: 'Avenir';
-  text-align: -webkit-center;
+  text-align: center;
   margin-bottom: 35px;
   margin-top: 15px;
   p {
