--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,7 +10,9 @@ $gray: #000000;
 $light-gray: #F4F4F4;
 
 $main-color: #333333;
-$manaca-purple: #4166FC;
+$manaca-purple: #353cff;
+$manaca-strong-blue: #162d5a;
+$manaca-gray: #7f7f7f;
 
 $dark-grey: #5b5a5e;
 $dark-yellow: #f1cf00;
