--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <section id="simulate">
       <div class="simulate ">
         <div class="simulate-card">
-          <h1><spam style="color: #2c4687">Simule uma </spam>antecipação.</h1>
+          <h1><spam style="color: #162d5a">Simule uma </spam>antecipação.</h1>
         </div>
         <div id="simulate-card" class="simulate-card card-border">
           <%= image_tag "imagens/pencil.png", class: 'pencil' %>
@@ -60,7 +60,7 @@
       <div class="hashtags-box">
         <p class="hashtags">#SomosTodosEmpreendedores</p>
         <h4>Nós não criamos a Manacá porque gostávamos de factoring.</h4>
-        <p style="color: #4f82fc">Muito pelo contrário.</p>
+        <p style="color: #162d5a">Muito pelo contrário.</p>
         <p>A Manacá foi fundada com a missão de ser o melhor parceiro financeiro que o empreendedor pode ter. Sendo assim, temos como principal objetivo, provar que mesmo em um mercado antigo e burocrático, é possível ser simples, moderno e eficiente.</p>
       </div>
     </div>
