--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
                 <div class="left">
                   <div class="content">
                     <h4 class="text-left card-title mb-2 mt-5">Ficou alguma dúvida?</h4>
-                    <h5  style="color: #6687ff;font-size: 18px; font-family: 'Avenir Next Light';">Somos digitais, mas somos humanos.</h5>
+                    <h5  style="color: #353cff; font-size: 18px;">Somos digitais, mas somos humanos.</h5>
                   </div>
                 </div>
                 <div class="right">
@@ -73,7 +73,7 @@
       <div class="footer-copyright">
         <p>Desenvolvido por <a href="http://www.hortalab.com/" target="_blank">HortaTech <%= image_tag "horta_branco.png", class: "hortalab-icon" %></a> <span style="font-size: 0.6em;"> @2019</span></p>
       </div>
-    <%= image_tag 'footersymbol.png', class: "symbol " %>
+    <%= image_tag 'footer-symbol.svg', class: "symbol " %>
   </footer>
 </div>
 
