--- a/app/assets/stylesheets/components/_footer_dark.scss
+++ b/app/assets/stylesheets/components/_footer_dark.scss
@@ -1,9 +1,3 @@
-// .footer-dark {
-//   padding: 50px 0;
-//   color: #f0f9ff;
-//   background-color: #282d32;
-// }
-
 footer .logo  {
   text-align: center;
   margin-bottom: 20px;
@@ -14,10 +8,10 @@ footer .logo  {
 }
 
 .footer-dark {
-  background-color: #162D5A;
+  background-color: $manaca-strong-blue;
   background-repeat: no-repeat;
   background-position: bottom right;
-  background-image: url(../img/footersymbol.png);
+  background-image: url(../img/footer-symbol.svg);
   background-size: 300px;
   background-image: none;
   padding-top: 20px;
@@ -28,10 +22,10 @@ footer .logo  {
 .footer-dark h3 {
   margin-top: 0;
   margin-bottom: 12px;
-  font-weight: 600;
   font-size: 12px;
-  font-family: 'Avenir Next';
-  color: #ffffff;
+  font-family: 'Avenir-medium';
+  font-weight: normal;
+  color: white;
 }
 
 .footer-dark ul {
@@ -45,12 +39,9 @@ footer .logo  {
 .footer-dark ul a {
   color: inherit;
   text-decoration: none;
-  opacity: 0.6;
-  font-weight: 300;
-  color: #ced4da !important;
   opacity: 1;
-  font-family: 'Avenir Next';
-  font-weight: 300;
+  font-family: 'Avenir';
+  // font-weight: normal;
   color: #ced4da !important;
 }
 
@@ -121,7 +112,7 @@ footer .logo  {
   font-size: 13px;
   margin-bottom: 0;
   font-weight: 100;
-  color: #ffffff !important;
+  color: white !important;
   opacity: 1;
 }
 
@@ -157,7 +148,7 @@ footer .logo  {
 }
 
 .duvidas .intro {
-  background-color: #162d5a;
+  background-color: $manaca-strong-blue;
   background-size: cover;
   height: auto;
   display: flex;
@@ -177,14 +168,13 @@ footer .logo  {
     margin-bottom: 20px !important;
     /*box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;*/
     color: #fff;
-    background-color: #353cff;
+    background-color: $manaca-purple;
 }
 
 .duvidas .card-title {
-  color: #fff;
-  font-weight: 600;
-  font-family: 'Avenir', sans-serif;
-  font-size: 20px;
+  color: white;
+  font-family: 'Avenir-medium';
+  font-size: 28px;
   margin-bottom: 15px !important;
   margin-top: 0px !important;
   margin-right: 0px !important;
@@ -193,8 +183,12 @@ footer .logo  {
 
 }
 
+.left h5 {
+  font-family: "Avenir-medium";
+}
+
 .duvidas strong {
-  color: #ffffff;
+  color: white;
 }
 
 .duvidas .row {
