--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -99,13 +99,13 @@
 }
 
 .social-links a {
-  color: #4F82FC;
+  color: $manaca-purple;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
 }
 .social-links a:hover {
-  color: #4F82FC;
+  color: $manaca-purple;
   opacity: 0.3;
 }
 
