fix simulate card pointer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <!-- SIMULATE SECTION -->
     <section id="simulate">
       <div class="simulate ">
-        <div class="simulate-card">
+        <div class="">
           <h1><spam style="color: #2c4687">Simule uma </spam>antecipação.</h1>
         </div>
         <div id="simulate-card" class="simulate-card card-border">
