--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </div>
         <div id="simulate-card" class="simulate-card card-border">
           <%= image_tag "imagens/pencil.png", class: 'pencil' %>
-          <p>Clique aqui para<br> inicar a simulação</p>
+          <p>Clique aqui para<br> iniciar a simulação</p>
         </div>
       </div>
     </section>
@@ -83,7 +83,7 @@
       <div class="card-content">
         <%= image_tag 'imagens/writing-azul.svg', class: 'card-image' %>
         <h4><spam class="index">03</spam> Solicite uma antecipação</h4>
-        <p>Suba suas notas fiscaisna plataforma enviando arquivos .xml ou digitando a operação. Simule e aprove as faturas que deseja antecipar.</p>
+        <p>Suba suas notas fiscais na plataforma enviando arquivos .xml ou digitando a operação. Simule e aprove as faturas que deseja antecipar.</p>
       </div>
 
       <div class="card-content">
