--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <section id="simulate">
       <div class="simulate ">
         <div class="">
-          <h1><spam style="color: #162d5a">Simule uma </spam>antecipação.</h1>
+          <h1>Simule <spam style="color: #162d5a">uma operação.</spam></h1>
         </div>
         <div id="simulate-card" class="simulate-card card-border">
           <%= image_tag "imagens/pencil.png", class: 'pencil' %>
