--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
         <div class="banner-content">
           <h4>Antecipe seu sucesso.</h4>
           <p class="banner-text">A Manacá está revolucionando a antecipação de recebíveis oferecendo a taxa mais baixa do mercado com o máximo de transparência.</p>
-          <div id="click-simulate" class="button">FAÇA SUA SIMULAÇÃO</div>
+          <div id="click-simulate" class="button">FAÇA UMA SIMULAÇÃO</div>
         </div>
           <%= image_tag 'imagens/symbol.svg', class: "banner-logo" %>
       </div>
