Change font from 'Fale com um especialista'

--- a/app/assets/stylesheets/components/_footer_dark.scss
+++ b/app/assets/stylesheets/components/_footer_dark.scss
@@ -168,6 +168,7 @@ footer .logo  {
   margin-bottom: 20px !important;
   color: #fff;
   background-color: $manaca-purple;
+  font-family: 'Avenir-medium';
 }
 
 .duvidas .card-title {
