--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
                 </div>
                 <div class="right">
                   <a class="btn btn-secondary text-nowrap pl-4 pr-4 mb-5" role="button" href="https://www.manacacapital.com.br/contact">Fale com um especialista</a>
-                  <h4 style="font-weight: 200;color: rgba(125,130,133,0.77);font-size: 16px; font-family: 'Avenir Next Light';">
+                  <h4 style="font-weight: 200;color: rgba(125,130,133,0.77);font-size: 16px; font-family: 'Avenir-Next-Light';">
                   <strong>11 3854-7888 | </strong> <strong>contato@manaca.digital</strong><br></h4>
                 </div>
               </div>
