Change font family from 'Simule uma operação'

--- a/app/assets/stylesheets/components/_simulate.scss
+++ b/app/assets/stylesheets/components/_simulate.scss
@@ -9,7 +9,7 @@
     margin-bottom: 0;
   }
   h1 {
-    font-family: 'Avenir';
+    font-family: 'Avenir-Next-Bold';
     font-weight: bold;
     font-size: 52px;
     margin: 70px auto;
