--- a/app/assets/stylesheets/components/_simulate.scss
+++ b/app/assets/stylesheets/components/_simulate.scss
@@ -18,12 +18,12 @@
 
 .simulate-card {
   cursor: pointer;
-  padding: 35px 0;
+  padding: 36px 0;
 }
 
 .card-border {
-  width: 400px;
-  border: 6px solid #4f82fc;
+  width: 501px;
+  border: 8px solid #353cff;
   border-radius: 2px;
   margin: 0 auto 100px;
 }
@@ -34,8 +34,22 @@
 }
 
 
+@media (max-width: 1439px) {
+  .simulate-card {
+    width: 400px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .simulate-card {
+    width: 90%;
+    padding: 12px;
+  }
+}
+
+
 @media (max-width: 767px) {
   .simulate-card {
-    width: 290px;
+    // width: 290px;
   }
 }
